modify(ResourceFinder): Files 클래스를 사용하도록 변경